// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`create-thread tool creating threads should create a thread in a channel 1`] = `
"# Thread Created

**Title:** New Discussion
**Thread ID:** 12345
**Channel ID:** 67890
**Created:** 2024-01-01T00:00:00.000Z
**URL:** https://twist.com/a/11111/ch/67890/t/12345/

## Content

Let us discuss this topic

> Note: Threads you create do not appear in your own Inbox by default — only recipients see them there. Find the thread in the channel view or via its URL."
`;

exports[`create-thread tool creating threads should create a thread with recipients 1`] = `
"# Thread Created

**Title:** Notify Users
**Thread ID:** 12345
**Channel ID:** 67890
**Created:** 2024-01-01T00:00:00.000Z
**URL:** https://twist.com/a/11111/ch/67890/t/12345/

## Content

Important update

> Note: Threads you create do not appear in your own Inbox by default — only recipients see them there. Find the thread in the channel view or via its URL."
`;
